Changelog for modCKEditor

1.0.4-beta (29.10.2016)
==============
- Improved "main class"
- Add "lexicon"

1.0.3-beta (28.10.2016)
==============
- Improved "setting"

1.0.2-beta (23.10.2016)
==============
- Remove "justify" from "removePlugins"
- Change "types variables"

1.0.1-beta (23.10.2016)
==============
- Fix "file upload.class.php"

1.0.0-beta
==============
- Initial